--- a/style.css
+++ b/style.css
@@ -8,25 +8,32 @@ body {
     width: 100vw;
     height: 100vh; 
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    flex-direction: column;
+
 }
 
 .main-container {
     width:760px;
     height:760px;
-    border: 2px solid black;
+    
     display: flex;
     flex-direction: column;
 }
 
 .row-container {
-    border: 1px solid black;
+    
     flex: 1;
     display: flex;
 }
 
 .cell {
     flex: 1;
-    border: 2px solid black;
+    border: 1px solid black;
+}
+
+.size-button {
+    padding: 10px;
+    align-self: center;
 }
