--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 .main-container {
     width:760px;
     height:760px;
-    
+    border: 1px solid black;
     display: flex;
     flex-direction: column;
 }
